fixed main element issue using overflow property to make main (parent element) size taller and contain the card elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
 main {
     background-color: rgb(244, 241, 241);
     padding: 1% 0 1% 0;
-
+    overflow: auto;
 }
 
 header, footer {
